<resources>
    <!-- nombre de la aplicación -->
    <string name="app_name" translatable="false">GoogleBooksClient</string>

    <!-- textos de la vista -->
    <string name="libro_string">Libro</string>
    <string name="titulo_string">Título</string>
    <string name="autor_string">Autor</string>
    <string name="paginas_string" translatable="false">101</string>
    <string name="revista_string">Revista</string>
    <string name="ambas_string">Ambas</string>
    <string name="buscar_string">Buscar</string>
    <string name="resultado_string">Resultados</string>
    <string name ="cargando_string">Cargando…</string>
    <string name ="numero_paginas_string">Páginas:</string>
    <string name ="nullResultado_string">No se han encontrado resultados</string>

    <!-- API key -->
    <string name="TokenAPI" translatable="false">AIzaSyCgcmZj01An4CkRZicIA2EzQrk-bGTL9qU</string>

    <!-- mensajes de error -->
    <string name="error_text">Introduzca el nombre del autor o el título</string>
    <string name="error_falta_titulo_revista">Introduzca un título</string>
    <string name="error_sin_conexion_busqueda">No se puede realizar la búsqeuda si no hay
    conexión a Internet</string>
</resources>