<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTitulo"
        android:layout_width="322dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/titulo_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextAutor"
        android:layout_width="322dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:hint="@string/autor_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="407dp"
        android:layout_height="59dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAutor">

        <RadioButton
            android:id="@+id/radioButtonLibro"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/libro_string"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="230dp" />

        <RadioButton
            android:id="@+id/radioButtonRevista"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/revista_string"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="278dp" />

        <RadioButton
            android:id="@+id/radioButtonAmbas"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ambas_string"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="230dp" />

    </RadioGroup>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="60dp"
        android:layout_height="92dp"
        android:layout_marginTop="16dp"

        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="409dp"
        android:layout_height="543dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="187dp" />

</androidx.constraintlayout.widget.ConstraintLayout>